--- a/python for data science - fundamentals.ipynb
+++ b/python for data science - fundamentals.ipynb
@@ -47,15 +47,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "header, app_store_data = read_csv('AppleStore.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -70,22 +61,15 @@
     }
    ],
    "source": [
+    "header, app_store_data = read_csv('AppleStore.csv')\n",
+    "\n",
     "for row in app_store_data[:5]:\n",
     "    print(row)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genres_ft = frequency_table(11, app_store_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,21 +103,13 @@
     }
    ],
    "source": [
+    "genres_ft = frequency_table(11, app_store_data)\n",
     "pp.pprint(genres_ft)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ratings_ft = frequency_table(7, app_store_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -154,22 +130,16 @@
     }
    ],
    "source": [
+    "ratings_ft = frequency_table(7, app_store_data)\n",
     "pp.pprint(ratings_ft)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "content_ratings_ft = frequency_table(10, app_store_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -180,6 +150,7 @@
     }
    ],
    "source": [
+    "content_ratings_ft = frequency_table(10, app_store_data)\n",
     "pp.pprint(content_ratings_ft)"
    ]
   }
